# rustc_offload_frontend

./: Cargo.toml  README.md
scripts/: compile
src/: gpu.rs  lib.rs  main.rs  partition.rs
